Prototype of leap implementation

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,3 @@
 name: SRClasses
 version: 1.0
-main: io.github.simonlk1.srclasses.SRClasses
-
-commands:
-  kit:
-    description: Gives the player a diamond and 20 bricks
-    usage: /kit
-    permission: SRClasses.kit
+main: io.github.simonlk1.srclasses.Main
